--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
+    "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.10"
   }
 }
