--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.13.3",
+    "@mantine/carousel": "^7.13.4",
     "@mantine/core": "^7.13.3",
     "@mantine/hooks": "^7.13.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "embla-carousel-react": "^7.1.0",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
